Compatibility test related fixes and improvements
- Cleaned up Versions constants for 4.x
- Updated & improved HazelcastVersionLocator: removed
lookup for client artifact, minor cleanups
- Updated dynamically attached agent for final class
modifier removal
- AnswerTest is removed for OS repository; it is
moved to EE repository, to be executed properly as a
compatibility test